--- a/s1-service/Dockerfile
+++ b/s1-service/Dockerfile
@@ -1,8 +1,8 @@
 FROM java:8-jre
 MAINTAINER Valeriy Doroshenko <vdoroshenko@exadel.com>
 
-ADD ./target/dynamailboxes-service.jar /opt/dynamailboxes/app/
-RUN mkdir -p /opt/dynamailboxes/log
-CMD ["java", "-Xmx200m", "-jar", "/opt/dynamailboxes/app/dynamailboxes-service.jar"]
+ADD ./build/libs/s1-0.0.1.jar /opt/s1/app/
+RUN mkdir -p /opt/s1/log
+CMD ["java", "-Xmx200m", "-jar", "/opt/s1/app/s1-0.0.1.jar"]
 
 EXPOSE 8080
