--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,26 @@
-.gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
+**/.gradle
+**/build/
+**/!gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+**/.apt_generated
+**/.classpath
+**/.factorypath
+**/.project
+**/.settings
+**/.springBeans
+**/.sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-/out/
+**/.idea
+**/*.iws
+**/*.iml
+**/*.ipr
+**/out/
 
 ### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+**/nbproject/private/
+**/nbbuild/
+**/dist/
+**/nbdist/
+**/.nb-gradle/
